test/libhyperion/syntaxTests/denominations/gwei_as_identifier.hyp
contract C {
	uint constant gplanck = 1;
}
// ----
// ParserError 2314: (28-32): Expected identifier but got 'gplanck'
